# research_assistant

./: .env.example  .gitignore  LICENSE  README.md  requirements.txt
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
deep_law_expert/: .env.example  README.md  main.py  pyproject.toml
deep_law_expert/knowledgeGraph_construction/: kg_construtor.py
legal-rag-chatbot/: .gitignore  QUICKSTART.md  README.md
legal-rag-chatbot/backend/: README.md  requirements.txt
legal-rag-chatbot/backend/supabase/: config.toml
legal-rag-chatbot/backend/supabase/functions/chat-rag/: index.ts
legal-rag-chatbot/backend/supabase/functions/process-pdf/: index.ts
legal-rag-chatbot/backend/supabase/migrations/: 20251031141329_bff70860-fef9-4ce2-aaf4-92fa7510f7af.sql
legal-rag-chatbot/frontend/: README.md  index.html
legal-rag-chatbot/frontend/src/: index.css
legal-rag-chatbot/frontend/src/components/: Auth.tsx  ChatInterface.tsx  DocumentManager.tsx
legal-rag-chatbot/frontend/src/integrations/supabase/: types.ts
legal-rag-chatbot/frontend/src/pages/: Dashboard.tsx  Index.tsx
